--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
+  <a class="navbar-brand" routerLink="/">HOME</a>
+
+  <ul class="navbar-nav">
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/todo">todo</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/heroes">heroes</a>
+    </li>
+  </ul>
+</nav>
+
 <div class="container">
-  <app-heroes></app-heroes>
+  <router-outlet></router-outlet>
 </div>
 
 
-<router-outlet></router-outlet>
