--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
 
   <ul class="navbar-nav">
     <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/jquery">jquery</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" routerLink="/todo">todo</a>
     </li>
     <li class="nav-item" routerLinkActive="active">
