--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,3 +1,60 @@
-<p>
-  todo works!
-</p>
+<form #myForm="ngForm" (submit)="addTodo()">
+  <div class="row">
+    <div class="col-sm-8">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="할일을 입력하세요."
+               [(ngModel)]="newTodo.todo" name="todo" required #todo="ngModel" [class.alert-danger]="todo.dirty&&!todo.valid">
+      </div>
+    </div>
+
+    <div class="alert alert-danger" [hidden]="!todo.dirty || todo.valid">
+      할 일을 입력하세요.
+    </div>
+
+    <div class="col-sm-4">
+      <button type="submit" class="btn btn-primary btn-block" [disabled]="!myForm.form.valid">추가</button>
+    </div>
+  </div>
+</form>
+
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>완료</th>
+    <th>todo</th>
+    <th>생성일</th>
+    <th>수정일</th>
+    <th>삭제</th>
+  </tr>
+  </thead>
+  <tbody id="todo_list">
+
+  <ng-template ngFor let-todo [ngForOf]="todoList">
+    <tr *ngIf="!todo.isEdited">
+      <td>{{todo.isFinished ? '완료': '미완료'}}</td>
+      <td>{{todo.todo}}</td>
+      <td>{{todo.created}}</td>
+      <td>{{todo.updated}}</td>
+      <td><button class="btn btn-success" (click)="save(todo)">수정</button></td>
+      <td><button class="btn btn-danger" (click)="remove(todo)">삭제</button></td>
+    </tr>
+
+    <tr *ngIf="todo.isEdited">
+      <td><input type="checkbox" [(ngModel)]="todo.isFinished"> </td>
+      <td><input [(ngModel)]="todo.todo"></td>
+      <td>{{todo.created}}</td>
+      <td>{{todo.updated}}</td>
+      <td><button class="btn btn-primary" (click)="modify(todo)">저장</button></td>
+      <td><button class="btn btn-warning" (click)="restore(todo)">취소</button></td>
+    </tr>
+
+  </ng-template>
+
+  </tbody>
+</table>
+
+<ngb-pagination [collectionSize]="page.totalCount" [(page)]="page.pageIndex" [pageSize]="page.pageSize"
+                (pageChange)="pageChanged($event)">
+</ngb-pagination>
+
+<p>test: {{'test'|mydate:'asdasd'}}</p>
