--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,12 @@
     <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" routerLink="/heroes">heroes</a>
     </li>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/admin">admin</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" routerLink="/login">login</a>
+    </li>
   </ul>
 </nav>
 
